# local-image-search

./: .gitignore  CHECK_DRIVER.bat  DEPENDENCIES.md  DEPLOY.md  DEPLOYMENT_GUIDE.md  DEPLOY_CHECKLIST.md  DIAGNOSE_GPU.bat  DRIVER_FIX_GUIDE.md  ENCODING_FIX.md  FIX_GPU.bat  FIX_GUIDE.md  GITHUB_MAC_BUILD.md  GPU_FIX_GUIDE.md  INSTALL_GPU_TORCH.bat  INSTALL_GUIDE.md  MAC_COMPATIBILITY.md  PACKING_LIST.md  README.md  VERIFY_INSTALL.bat  check_env.bat  check_env.ps1  check_gpu.bat  clip_server.py  download_siglip2.py  fix.bat  package-lock.json  package.json  preflight_check.py  pyinstaller.spec  requirements.txt  setup.bat  setup.ps1  setup_mac.sh  test_exe.bat  test_exe.ps1
.github/workflows/: build-mac.yml
config/: model_config.json
models/: config.json
models/siglip2-large/: README.md  config.json
src/: package-lock.json  test.html
src-tauri/: Cargo.toml  create_icon.py  package-lock.json  package.json  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: main.rs
src-tauri/src/commands/: index.rs  paths.rs  search.rs  system.rs
src-tauri/src/db/: sqlite.rs
src-tauri/src/models/: clip.rs  mod.rs
src/src/: App.tsx  styles.css
src/src/api/: tauri.ts
